Add change to innerHTML

--- a/3. Javascript/javascript.html
+++ b/3. Javascript/javascript.html
@@ -5,11 +5,20 @@
     <title>Javascript</title>
   </head>
   <body>
-      <button onclick="alert('Hi!')">Click me!</button>
 
-      <script type="text/javascript">
-        alert("The page is loaded");
-      </script>
+    <p id="text">Hello World!</p>
+
+    <script type="text/javascript">
+
+      // This is a one line comment
+      /*
+        This is a multi-line
+        comment
+      */
+
+      document.getElementById("text").innerHTML = "Hello Mauricio!";
+
+    </script>
 
   </body>
 </html>
